--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,4 +11,11 @@ jobs:
         type: 'zip'
         filename: 'RelaxHesMyStepdadMedia.zip'
         exclusions: '*.git* /*node_modules/* .editorconfig'
+
+    - name: Upload Release
+      uses: ncipollo/release-action@v1.12.0
+      with:
+        artifacts: "RelaxHesMyStepdadMedia.zip"
+        token: ${{ secrets.GITHUB_TOKEN }}
+            
   
