--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3
     - name: Archive Release
       uses: thedoctor0/zip-release@0.7.5
       with:
@@ -13,9 +13,10 @@ jobs:
         exclusions: '*.git* /*node_modules/* .editorconfig'
 
     - name: Upload Release
-      uses: ncipollo/release-action@v1.12.0
+    - uses: actions/checkout@v3
+    - uses: ncipollo/release-action@v1.12.0
       with:
         artifacts: "RelaxHesMyStepdadMedia.zip"
-        token: ${{ secrets.GITHUB_TOKEN }}
+        commit: "main"
             
   
