--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,5 +17,6 @@ jobs:
       with:
         artifacts: "RelaxHesMyStepdadMedia.zip"
         commit: "main"
+        tag: "release"
             
   
