--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,12 +18,12 @@ jobs:
     #  run: echo "::set-output name=version::$(node ./.github/workflows/get-verison.js)"
 
 
-    #- name: Archive Release
-    #  uses: thedoctor0/zip-release@0.7.5
-    #  with:
-    #    type: 'zip'
-    #    filename: 'RelaxHesMyStepdadMedia'+${{ steps.get-version.outputs.version}}+'.zip'
-    #    exclusions: '*.git* /*node_modules/* .editorconfig'
+    - name: Archive Release
+      uses: thedoctor0/zip-release@0.7.5
+      with:
+        type: 'zip'
+        filename: "RelaxHesMyStepdadMedia-${{ github.ref_name }}.zip"
+        exclusions: '*.git* /*node_modules/* .editorconfig'
 
     - name: Create Zip
       id: create-zip
