--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,7 +35,7 @@ jobs:
       uses: ncipollo/release-action@v1.12.0
       with:
         allowUpdates: true
-        name: Release ${{ steps.get-version.outputs.version }}
+        name: Release ${{ github.ref_name }}
         draft: false
         prerelease: false
         token: ${{secrets.GITHUB_TOKEN}}
